<resources>
    <string name="app_name">Razón Financiera</string>
    <string name="textoboton1">Iniciar</string>
    <string name="encabezadoactivo">Activos</string>
    <string name="activocirculante">Activo circulante</string>
    <string name="caja">Caja</string>
    <string name="bancos">Bancos</string>
    <string name="inversionesTemp">Inversion temporal</string>
    <string name="inventario">Inventario</string>
    <string name="clientes">Clientes</string>
    <string name="deudoresDiversos">Deudores diversos</string>
    <string name="activoFijo">Activo Fijo</string>
    <string name="terrenos">Terrenos</string>
    <string name="edificios">Edificios</string>
    <string name="mobiliarioyEquipo">Mobiliario y equipo</string>
    <string name="capitalypasivo"></string>
    <string name="encabezadoPasivo">Pasivos</string>
    <string name="PasivoCortoPlazo">Pasivos a corto plazo</string>
    <string name="proveedores">Proveedores</string>
    <string name="documentosXPagar">Pagarés</string>
    <string name="acreedoresDiversos">Acreedores diversos</string>
    <string name="anticipoDeClientes">Anticipos de clietes</string>
    <string name="impuestosPorPagar">Impuestos por pagar</string>
    <string name="pasivoLargoPlazo">Pasivos a largo plazo</string>
    <string name="hipotecas">Hipotecas</string>
    <string name="deudasLargoPlazo">Deudas a largo plazo</string>
    <string name="capitalContable">Capital contable</string>
    <string name="capitalSocial">Capital social</string>
    <string name="utilidadesRetenidas">Utilidades retenidas</string>
    <string name="boton2">Descripción de cuentas</string>
    <string name="boton3">Análisis</string>
    <string name="razon1">Razòn circulante</string>
    <string name="razon2">Prueba acida</string>
    <string name="razon3">Prueba sùper acida</string>
    <string name="razon4">Razòn de deuda total</string>
    <string name="razon5">Razòn apalancamiento</string>
    <string name="razon6">Capital neto de trabajo</string>
</resources>
