<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_fourth4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/imagendeapp"
    tools:context="com.yucatancorp.razonamientofinanciero.Fourth4Activity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/botonrazon1"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/razon1"
                android:layout_weight="1"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/botonrazon2"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/razon2"
                android:layout_weight="1"
                android:textAllCaps="false"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear1">

            <Button
                android:id="@+id/botonrazon3"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/razon3"
                android:layout_weight="1"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/botonrazon4"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/razon4"
                android:layout_weight="1"
                android:textAllCaps="false"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear2">


            <Button
                android:id="@+id/botonrazon5"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/razon5"
                android:layout_weight="1"
                android:textAllCaps="false"/>


            <Button
                android:id="@+id/botonrazon6"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/razon6"
                android:layout_weight="1"
                android:textAllCaps="false"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
